force-app/main/default/objects/ampi__Project__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Captures the status of a project record once it has been submitted into an approval process. This field will update at the three various stages on the project lifecycle: In Identification, In Formulation, and In Implementation.</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved by NA</fullName>
            </value>
            <value>
                <fullName>Rejected by NA</fullName>
            </value>
            <value>
                <fullName>Rejected by IOR</fullName>
            </value>
            <value>
                <fullName>Reviewed by IOR</fullName>
            </value>
            <value>
                <fullName>Reviewed by PSA</fullName>
            </value>
            <value>
                <fullName>Rejected by PSA</fullName>
            </value>
            <value>
                <fullName>Approved by IO</fullName>
                <isActive>false</isActive>
                <label>Approved by IO</label>
            </value>
            <value>
                <fullName>Approved by IOR</fullName>
                <isActive>false</isActive>
                <label>Approved by IOR</label>
            </value>
            <value>
                <fullName>Rejected by IO</fullName>
                <isActive>false</isActive>
                <label>Rejected by IO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>