force-app/main/default/objects/ampi__Project__c/fields/Approved_Actual_LCY__c.field-meta.xml
<CustomField>
    <fullName>Approved_Actual_LCY__c</fullName>
    <inlineHelpText>Manual field: difference between Total Approved Project Budget and Actual Expenditures in local currency. Helps Project owner to see how much of project budget is still available.</inlineHelpText>
    <label>Approved - Actual (LCY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>