force-app/main/default/objects/ampi__Project__c/fields/Approved_Actual_Variance_DC__c.field-meta.xml
<CustomField>
    <fullName>Approved_Actual_Variance_DC__c</fullName>
    <formula>Approved_Total_Project_Budget_DCY__c  -  Actuals_Total_Project_Expenditures_DCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated field: difference between Total Approved Project Budget and Actual Expenditures in donor currency. Helps Project owner to see how much of project budget is still available.</inlineHelpText>
    <label>Approved - Actual (DCY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>