force-app/main/default/objects/ampi__Project__c/fields/Approved_Co_Funding_Share__c.field-meta.xml
<CustomField>
    <fullName>Approved_Co_Funding_Share__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Indicate the amount your organisation will provide as co-funding via co-funding mechanism (in donor currency).  Insert 0 if you didn´t request anything from the co-funding mechanism.</inlineHelpText>
    <label>Approved Amount Co-Fund.Mechanism (DCY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>