force-app/main/default/objects/ampi__Project__c/fields/Approved_Co_Funding_Share_EUR__c.field-meta.xml
<CustomField>
    <fullName>Approved_Co_Funding_Share_EUR__c</fullName>
    <formula>Approved_Co_Funding_Share__c  /  Exchange_Rate_For_Approved_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This value is calculated automatically based on the exchange rate that was provided. It shows the amount your organisation will provide as co-funding via co-funding mechanism in EUR. Values in EUR are important for global reporting.</inlineHelpText>
    <label>Approved Amount Co-Fund.Mechanism (EUR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>