force-app/main/default/objects/ampi__Project__c/fields/Approved_Own_Funding_Share_DC__c.field-meta.xml
<CustomField>
    <fullName>Approved_Own_Funding_Share_DC__c</fullName>
    <formula>Approved_Total_Project_Budget_DCY__c - Grant_Amount_Approved_By_Donor__c -  Approved_Co_Funding_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This value is calculated automatically and shows how much of own funding your organisation should provide to match the total project budget in donor currency (Total project budget minus amount requested from the donor)</inlineHelpText>
    <label>Approved Additional Own Funding (DCY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>