force-app/main/default/objects/ampi__Project__c/fields/Approved_Own_Funding_Share_EUR__c.field-meta.xml
<CustomField>
    <fullName>Approved_Own_Funding_Share_EUR__c</fullName>
    <formula>Approved_Own_Funding_Share_DC__c  /  Exchange_Rate_For_Approved_Budget__c</formula>
    <inlineHelpText>This value is calculated automatically based on the exchange rate that was provided. It shows much of own funding your organisation should provide to match the total project budget in EUR. Values in EUR are important for global reporting.</inlineHelpText>
    <label>Approved Additional Own Funding (EUR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>