force-app/main/default/objects/ampi__Project__c/fields/Approved_Total_Projec_Budget_Eur__c.field-meta.xml
<CustomField>
    <fullName>Approved_Total_Projec_Budget_Eur__c</fullName>
    <formula>Approved_Total_Project_Budget_DCY__c / Exchange_Rate_For_Approved_Budget__c</formula>
    <inlineHelpText>This value is calculated automatically based on the exchange rate that was provided. It shows the total project budget approved by the donor in EUR. Values in EUR are important for global reporting.</inlineHelpText>
    <label>Approved Total Project Budget (EUR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>