force-app/main/default/objects/ampi__Project__c/fields/Approved_Total_Project_Budget_DCY__c.field-meta.xml
<CustomField>
    <fullName>Approved_Total_Project_Budget_DCY__c</fullName>
    <inlineHelpText>Mandatory for status &quot;application approved&quot;. 
Enter here the total project budget for its entire duration in donor currency as per grant contract in donor currency.</inlineHelpText>
    <label>Approved Total Project Budget (DCY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>