force-app/main/default/objects/ampi__Project__c/fields/Areas_of_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Intervention__c</fullName>
    <label>SOS Humanitarian Strategy Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group Activities for Child Well-being</fullName>
            </value>
            <value>
                <fullName>Preserving Family Unity</fullName>
            </value>
            <value>
                <fullName>Education in Emergencies</fullName>
            </value>
            <value>
                <fullName>Mental Health and Psychosocial Support</fullName>
            </value>
            <value>
                <fullName>Interim Alternative Care</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Cash Transfer Programming (CTP)</fullName>
            </value>
            <value>
                <fullName>Child Friendly Space</fullName>
            </value>
            <value>
                <fullName>Community Outreach</fullName>
            </value>
            <value>
                <fullName>Early Childhood Development</fullName>
            </value>
            <value>
                <fullName>Family Reunificaton</fullName>
            </value>
            <value>
                <fullName>Family Strenghtening</fullName>
            </value>
            <value>
                <fullName>Food distribution</fullName>
            </value>
            <value>
                <fullName>Livelihood</fullName>
            </value>
            <value>
                <fullName>MHPSS</fullName>
            </value>
            <value>
                <fullName>Prevention of Family Separation</fullName>
            </value>
            <value>
                <fullName>Employability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>