force-app/main/default/objects/ampi__Project__c/fields/Auto_Add_Team_Members_Added__c.field-meta.xml
<CustomField>
    <fullName>Auto_Add_Team_Members_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to prevent team members from being added to a project multiple times</description>
    <label>Auto Add Team Members Added?</label>
    <type>Checkbox</type>
</CustomField>