force-app/main/default/objects/ampi__Project__c/fields/Care_Promise_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Care_Promise_Alignment__c</fullName>
    <label>Care Promise Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>