force-app/main/default/objects/ampi__Project__c/fields/Chatter_Post_Status_Application_Approved__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Post_Status_Application_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Chatter post has gone out when a project is in Status Application Approved</description>
    <label>Chatter Post Status Application Approved</label>
    <type>Checkbox</type>
</CustomField>