force-app/main/default/objects/ampi__Project__c/fields/Chatter_Post_Status_Exit_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Post_Status_Exit_in_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Chatter post has gone out when a project is in Status Exit in Progress</description>
    <label>Chatter Post Status Exit in Progress</label>
    <type>Checkbox</type>
</CustomField>