force-app/main/default/objects/ampi__Project__c/fields/Chatter_Post_Status_In_Identification__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Post_Status_In_Identification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Chatter post has gone out when a project is in Status In Identification</description>
    <label>Chatter Post Status In Identification</label>
    <type>Checkbox</type>
</CustomField>