force-app/main/default/objects/ampi__Project__c/fields/Closure_Deliverables_Created__c.field-meta.xml
<CustomField>
    <fullName>Closure_Deliverables_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closure Deliverables Created</label>
    <type>Checkbox</type>
</CustomField>