force-app/main/default/objects/ampi__Project__c/fields/Concept_Funding_Approved__c.field-meta.xml
<CustomField>
    <fullName>Concept_Funding_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Funding Approved​</label>
    <type>Checkbox</type>
</CustomField>