force-app/main/default/objects/ampi__Project__c/fields/Concept_Funding_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Concept_Funding_Approved_Date__c</fullName>
    <label>Project Funding Approved Date</label>
    <type>Date</type>
</CustomField>