force-app/main/default/objects/ampi__Project__c/fields/Concept_Note_Approved_by_IO_Date__c.field-meta.xml
<CustomField>
    <fullName>Concept_Note_Approved_by_IO_Date__c</fullName>
    <label>Concept Note Approved by IO Date</label>
    <type>Date</type>
</CustomField>