force-app/main/default/objects/ampi__Project__c/fields/Concept_Note_Approved_by_NA_Date__c.field-meta.xml
<CustomField>
    <fullName>Concept_Note_Approved_by_NA_Date__c</fullName>
    <label>Application package reviewed by NA Date</label>
    <type>Date</type>
</CustomField>