force-app/main/default/objects/ampi__Project__c/fields/Concept_Note_Validated_by_IO__c.field-meta.xml
<CustomField>
    <fullName>Concept_Note_Validated_by_IO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concept Note Validated by IO</label>
    <type>Checkbox</type>
</CustomField>