force-app/main/default/objects/ampi__Project__c/fields/Concept_Note_Validated_by_IOR__c.field-meta.xml
<CustomField>
    <fullName>Concept_Note_Validated_by_IOR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concept Note Validated by IOR</label>
    <type>Checkbox</type>
</CustomField>