force-app/main/default/objects/ampi__Project__c/fields/Concept_Note_Validated_by_IOR_Date__c.field-meta.xml
<CustomField>
    <fullName>Concept_Note_Validated_by_IOR_Date__c</fullName>
    <label>Concept Note Validated by IOR Date</label>
    <type>Date</type>
</CustomField>