force-app/main/default/objects/ampi__Project__c/fields/Consortium__c.field-meta.xml
<CustomField>
    <fullName>Consortium__c</fullName>
    <inlineHelpText>Mandatory for status &quot;concept in formulation/ application in formulation&quot;. Select yes if grant is a part of a strategic consortium constellation. For more information see Knowledge Base</inlineHelpText>
    <label>Consortium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>