force-app/main/default/objects/ampi__Project__c/fields/Consortium_Description__c.field-meta.xml
<CustomField>
    <fullName>Consortium_Description__c</fullName>
    <inlineHelpText>Add a description of the consortium constellation (Who are the strategic consortium partners? Among them, who is the lead? Who are the implementing partners linked to each consortium partner?).</inlineHelpText>
    <label>Consortium Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>