force-app/main/default/objects/ampi__Project__c/fields/Construction_Deliverable_Created__c.field-meta.xml
<CustomField>
    <fullName>Construction_Deliverable_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used in Project - Handler Process to prevent duplicate deliverables from being created.</description>
    <label>Construction Deliverable Created</label>
    <type>Checkbox</type>
</CustomField>