force-app/main/default/objects/ampi__Project__c/fields/Construction_Involved__c.field-meta.xml
<CustomField>
    <fullName>Construction_Involved__c</fullName>
    <inlineHelpText>Specify if construction activities need to be performed as part of the implementation</inlineHelpText>
    <label>Construction Involved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>