force-app/main/default/objects/ampi__Project__c/fields/Contract_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration_Months__c</fullName>
    <formula>((Contract_Eligibility_End_Date__c - Contract_Eligibility_Start_Date__c) / 365 )* 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The duration is calculated automatically by the system based on contract eligibility start and end date.</inlineHelpText>
    <label>Contract Duration (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>