force-app/main/default/objects/ampi__Project__c/fields/Contract_Eligibility_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Eligibility_End_Date__c</fullName>
    <label>Contract Eligibility End Date</label>
    <type>Date</type>
</CustomField>