force-app/main/default/objects/ampi__Project__c/fields/Contract_Eligibility_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Eligibility_Start_Date__c</fullName>
    <inlineHelpText>Mandatory for status &quot;application approved&quot;. 
It is the official date as per donor contract when project starts implementing its activities and expenses can be done.</inlineHelpText>
    <label>Contract Eligibility Start Date</label>
    <type>Date</type>
</CustomField>