force-app/main/default/objects/ampi__Project__c/fields/Country_of_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Implementation__c</fullName>
    <formula>SOS_Implementing_Organisation__r.Country__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This data field is filled in by the system based on the country of the Implementing Partner.</inlineHelpText>
    <label>Country of Implementation</label>
    <type>Text</type>
</CustomField>