force-app/main/default/objects/ampi__Project__c/fields/Country_of_the_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Country_of_the_Applicant__c</fullName>
    <formula>Applicant_Accountable_Organisation__r.Country__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country of the Applicant</label>
    <type>Text</type>
</CustomField>