force-app/main/default/objects/ampi__Project__c/fields/Create_Validation_Compliance_Submission__c.field-meta.xml
<CustomField>
    <fullName>Create_Validation_Compliance_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, process builder will fire to create a new Amp Submission record which is copied from the SOS &quot;Validation Compliance Check&quot; template (ID stored in Custom Label Validation_Compliance_Check_Template_ID), which is then completed by PPC approver.</description>
    <inlineHelpText>When checked, a new Validation Compliance Check record is created for a PPC approver to complete, while the Project is locked for approval.</inlineHelpText>
    <label>Create Validation Compliance Submission</label>
    <type>Checkbox</type>
</CustomField>