force-app/main/default/objects/ampi__Project__c/fields/Create_Workspace_Callout_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Workspace_Callout_Time__c</fullName>
    <label>Create Workspace Callout Time</label>
    <type>DateTime</type>
</CustomField>