force-app/main/default/objects/ampi__Project__c/fields/D365_PU_Count__c.field-meta.xml
<CustomField>
    <fullName>D365_PU_Count__c</fullName>
    <description>Number of D365 Project Stand-in records for this Project.</description>
    <inlineHelpText>Number of D365 Project Stand-in records for this Project.</inlineHelpText>
    <label>D365 PU Count</label>
    <summaryForeignKey>D365_Project_Stand_in__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>