force-app/main/default/objects/ampi__Project__c/fields/DashboardFilter__c.field-meta.xml
<CustomField>
    <fullName>DashboardFilter__c</fullName>
    <formula>IF($User.AccountID__c =  ampi__Account__r.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DashboardFilter</label>
    <type>Checkbox</type>
</CustomField>