force-app/main/default/objects/ampi__Project__c/fields/Donor_Currency__c.field-meta.xml
<CustomField>
    <fullName>Donor_Currency__c</fullName>
    <formula>TEXT( External_Donor__r.Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reference currency of the institutional donor (=DCY)</inlineHelpText>
    <label>Donor Currency</label>
    <type>Text</type>
</CustomField>