force-app/main/default/objects/ampi__Project__c/fields/Early_PSA_Feedback_Desired__c.field-meta.xml
<CustomField>
    <fullName>Early_PSA_Feedback_Desired__c</fullName>
    <description>Renamed as part of Phase 3 - Sprint 4 release of Standard Project Approval processes.</description>
    <inlineHelpText>Indicate &apos;yes&apos; if the National Office or Donor requires a programme idea. This will trigger an approval process. Indicate &apos;no&apos; if this is not required</inlineHelpText>
    <label>Programme Idea Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>