force-app/main/default/objects/ampi__Project__c/fields/Emergency_Description__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Description__c</fullName>
    <label>Emergency Description</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>