force-app/main/default/objects/ampi__Project__c/fields/Emergency_Humanitarian__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Humanitarian__c</fullName>
    <description>Used by the IPD/GER team to differentiate between grants that have an emergency component (checked = yes there is emergency/humanitarian intervention, not checked = there is no component of</description>
    <inlineHelpText>Check if this grant is funding an emergency or humanitarian action</inlineHelpText>
    <label>Emergency / Humanitarian Intervention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>