force-app/main/default/objects/ampi__Project__c/fields/Enable_for_External_Project_Team__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_External_Project_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this checkbox will set up an External Project Team so that the Project Owner can add Team Members (Role = &quot;Project Contributor&quot;) to the Project for MA Portal users to be able to collaborate on the Project. This is automatically checked by automation if a Project Manager (external user) creates a new Project.</description>
    <inlineHelpText>Checking this checkbox will set up an External Project Team so that the Project Owner can add Team Members (Role = &quot;Project Contributor&quot;) to the Project for MA Portal users to be able to collaborate on the Project. This is automatically checked by automation if a Project Manager (external user) creates a new Project.</inlineHelpText>
    <label>Enable for External Project Team?</label>
    <type>Checkbox</type>
</CustomField>