force-app/main/default/objects/ampi__Project__c/fields/Exchange_Rate_For_Approved_Budget__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_For_Approved_Budget__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Mandatory for status &quot;application approved&quot;. Indicate how many units of donor currency you need for 1 Euro (EUR). Example: &quot;1 EUR = 1,09 USD&quot;. Default value is set to 1.  Please use the InforEuro exchange rate from the date of the submission.</inlineHelpText>
    <label>Exchange Rate EUR to DCY (Approved)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>