force-app/main/default/objects/ampi__Project__c/fields/Exchange_rate_for_proposed_budget_LC__c.field-meta.xml
<CustomField>
    <fullName>Exchange_rate_for_proposed_budget_LC__c</fullName>
    <inlineHelpText>Indicate how many units of local currency you need for 1 unit of donor currency. Example 1 USD= 35,16 UAH</inlineHelpText>
    <label>Exchange Rate DCY To LCY (Planned)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>