force-app/main/default/objects/ampi__Project__c/fields/Exchange_Rate_For_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_For_Reporting__c</fullName>
    <inlineHelpText>Indicate how many units of local currency (LCY) you need for 1 unit of donor currency (DCY). Example: 1 USD = 35,16 UAH</inlineHelpText>
    <label>Exchange Rate DCY To LCY (Approved)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>