force-app/main/default/objects/ampi__Project__c/fields/Exchange_Rate_LCY_to_DCY_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_LCY_to_DCY_Actuals__c</fullName>
    <description>Indicate how many units of donor currency (DCY) you need for one of local currency (LCY).</description>
    <label>Exchange Rate LCY To DCY (Actual)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>