force-app/main/default/objects/ampi__Project__c/fields/Excluded_from_overhead_allocation__c.field-meta.xml
<CustomField>
    <fullName>Excluded_from_overhead_allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excluded from overhead allocation</label>
    <type>Checkbox</type>
</CustomField>