force-app/main/default/objects/ampi__Project__c/fields/Exist_Participants__c.field-meta.xml
<CustomField>
    <fullName>Exist_Participants__c</fullName>
    <formula>Actual_Number_Of_Participants__c &lt;&gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exist Participants?</label>
    <type>Checkbox</type>
</CustomField>