force-app/main/default/objects/ampi__Project__c/fields/Exit_Strategy_Approved_by_IOR_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy_Approved_by_IOR_Date__c</fullName>
    <label>Exit Strategy Approved by IOR Date</label>
    <type>Date</type>
</CustomField>