force-app/main/default/objects/ampi__Project__c/fields/Exit_Strategy_Approved_by_NA_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy_Approved_by_NA_Date__c</fullName>
    <label>Exit Strategy Approved by NA Date</label>
    <type>Date</type>
</CustomField>