force-app/main/default/objects/ampi__Project__c/fields/Exit_strategy_funding_approved__c.field-meta.xml
<CustomField>
    <fullName>Exit_strategy_funding_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit Strategy Funding Approved</label>
    <type>Checkbox</type>
</CustomField>