force-app/main/default/objects/ampi__Project__c/fields/Exit_strategy_funding_approved_date__c.field-meta.xml
<CustomField>
    <fullName>Exit_strategy_funding_approved_date__c</fullName>
    <label>Exit Strategy Funding Approved Date</label>
    <type>Date</type>
</CustomField>