force-app/main/default/objects/ampi__Project__c/fields/Exit_strategy_validated_by_NA__c.field-meta.xml
<CustomField>
    <fullName>Exit_strategy_validated_by_NA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit strategy validated by NA</label>
    <type>Checkbox</type>
</CustomField>