force-app/main/default/objects/ampi__Project__c/fields/Exit_strategy_validated_by_NA_date__c.field-meta.xml
<CustomField>
    <fullName>Exit_strategy_validated_by_NA_date__c</fullName>
    <label>Exit strategy validated by NA date</label>
    <type>Date</type>
</CustomField>