force-app/main/default/objects/ampi__Project__c/fields/Explanation_of_Planned_Exit_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Planned_Exit_Strategy__c</fullName>
    <label>Explanation of Planned Exit Strategy</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>