force-app/main/default/objects/ampi__Project__c/fields/External_Donor__c.field-meta.xml
<CustomField>
    <fullName>External_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicate external institutional donor. Please note that a sub-granting organisation is not considered as donor.</description>
    <inlineHelpText>Mandatory field for status &quot;in identification&quot;. Indicate external donor. Important: Search if the donor you are looking for is already registered. Only if not, create a new donor organisation. Sub-granting organisation is not considered as donor.</inlineHelpText>
    <label>Non SOS Donor Organisation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Non SOS Donor Organisation as External Donor</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Non SOS Donor Organisation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (External Donor)</relationshipLabel>
    <relationshipName>Donor_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>