force-app/main/default/objects/ampi__Project__c/fields/Feasibility_Rating__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_Rating__c</fullName>
    <description>Specify rating regarding the feasibility of project</description>
    <label>Feasibility Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>